<resources>
    <string name="app_name">Health app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings">Настройки</string>
    <string name="bottom_menu_food">Питание</string>
    <string name="bottom_menu_water">Вода</string>
    <string name="bottom_menu_help">Помощь</string>
    <string name="good_day">Добрый день!</string>
    <string name="settings_name">Представьтесь:</string>
    <string name="setting_gender">Ваш пол:</string>
    <string name="Male">М</string>
    <string name="Female">Ж</string>
    <string name="settings_weight">Ваш вес (в кг):</string>
    <string name="settings_height">Ваш рост (в cм)</string>
    <string name="settings_food_count">Сколько раз в день вы планируете питаться? (4 или 5)</string>
    <string name="settings_start_time">Время подъема:</string>
    <string name="settings_end_time">Время ложиться:</string>
    <string name="button_start_text">Начать работу</string>
    <string name="settings_validation">Заполните все поля!</string>
    <string name="water_drink_today">Сегодня выпито:</string>
    <string name="your_norma">Ваша норма:</string>
    <string name="water_recycler_text">Ваши приемы за сегодня</string>
    <string name="water_delete">Удалить прием?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="cup">Стакан (200 мл)</string>
    <string name="mug">Кружка (300 мл)</string>
    <string name="my_source">Своя ёмкость</string>
    <string name="hint_volume">Объем (в мл)</string>
    <string name="hint_source">Емкость</string>
    <string name="button_add_water">Добавить</string>
    <string name="notify_water_title">Выпейте воду</string>
    <string name="time_no_come">Время еще не пришло</string>
    <string name="click_food">Нажмите на прием пищи, чтобы отметить его</string>
</resources>
