<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_food"
            android:enabled="true"
            android:icon="@drawable/silverware"
            android:title="@string/bottom_menu_food"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_water"
            android:enabled="true"
            android:icon="@drawable/water"
            android:title="@string/bottom_menu_water"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_help"
            android:enabled="true"
            android:icon="@drawable/help"
            android:title="@string/bottom_menu_help"
            app:showAsAction="ifRoom"/>

</menu>