<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controller.SettingsFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/good_day"/>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/settings_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <EditText
                    android:id="@+id/fill_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="text"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_gender"/>

            <RadioGroup
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_group_gender"
                    android:orientation="horizontal">

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_button_male"
                        android:checked="true"
                        android:text="@string/Male"/>

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_button_female"
                        android:checked="false"
                        android:text="@string/Female"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/settings_weight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <EditText
                    android:id="@+id/fill_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="number"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/settings_height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <EditText
                    android:id="@+id/fill_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="number"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/settings_start_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <EditText
                    android:id="@+id/fill_start_date_time"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/settings_end_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <EditText
                    android:id="@+id/fill_end_date_time"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"/>
        </LinearLayout>

        <TextView
                android:text="Сколько раз в день вы планируете питаться?"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RadioGroup
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fill_food_count"
                android:orientation="horizontal">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_button_4"
                    android:checked="true"
                    android:text="4"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_button_5"
                    android:checked="false"
                    android:text="5"/>

        </RadioGroup>

        <Button
                android:id="@+id/button_start"
                android:text="Сохранить"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>