<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controller.WaterFragment">

    <include
            layout="@layout/toolbar_top"
            android:id="@+id/toolbar"/>

    <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/today_drink"
            android:padding="16dp"
            android:text="@string/water_drink_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textAppearance="@style/TextAppearance.AppCompat"/>

    <TextView
            android:id="@+id/your_norma"
            android:padding="16dp"
            android:text="@string/your_norma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textAppearance="@style/TextAppearance.AppCompat"/>


    <TextView
            android:padding="16dp"
            android:text="@string/water_recycler_text"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/water_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/FAB_Water"
            android:layout_gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>